@@ -1,4 +1,4 @@
-# $NetBSD: buildlink3.mk,v 1.4 2004/04/14 12:11:30 jmmv Exp $
+# $NetBSD: buildlink3.mk,v 1.5 2004/06/20 18:43:26 xtraeme Exp $
 #
 # This Makefile fragment is included by packages that use vlc.
 #
@@ -16,24 +16,30 @@ BUILDLINK_DEPENDS+=	vlc
 BUILDLINK_PACKAGES+=		vlc
 BUILDLINK_DEPENDS.vlc?=		vlc>=0.7.1
 BUILDLINK_PKGSRCDIR.vlc?=	../../multimedia/vlc
+.endif # VLC_BUILDLINK3_MK
 
+.include "../../multimedia/libdvdcss/buildlink3.mk"
 .include "../../audio/flac/buildlink3.mk"
+.include "../../audio/lame/buildlink3.mk"
 .include "../../audio/liba52/buildlink3.mk"
+.include "../../audio/libcddb/buildlink3.mk"
+.include "../../audio/libid3tag/buildlink3.mk"
 .include "../../audio/libmad/buildlink3.mk"
 .include "../../audio/libvorbis/buildlink3.mk"
-.include "../../audio/speex/buildlink3.mk"
 .include "../../converters/fribidi/buildlink3.mk"
 .include "../../devel/SDL/buildlink3.mk"
-.include "../../graphics/freetype2/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
-.include "../../misc/libdvdcss/buildlink3.mk"
-.include "../../misc/libdvdplay/buildlink3.mk"
-.include "../../misc/libdvdread/buildlink3.mk"
+.include "../../graphics/freetype2/buildlink3.mk"
+.include "../../misc/libcdio/buildlink3.mk"
+.include "../../multimedia/ffmpeg/buildlink3.mk"
+.include "../../multimedia/libdvdplay/buildlink3.mk"
+.include "../../multimedia/libdvbpsi/buildlink3.mk"
+.include "../../multimedia/libdvdread/buildlink3.mk"
+.include "../../multimedia/libmatroska/buildlink3.mk"
 .include "../../multimedia/libmpeg2/buildlink3.mk"
 .include "../../multimedia/libogg/buildlink3.mk"
 .include "../../net/openslp/buildlink3.mk"
+.include "../../sysutils/vcdimager-devel/buildlink3.mk"
 .include "../../x11/wxGTK/buildlink3.mk"
-
-.endif # VLC_BUILDLINK3_MK
 
 BUILDLINK_DEPTH:=     ${BUILDLINK_DEPTH:S/+$//}
