@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6232 2004/06/20 16:46:00 gehenna Exp $
+$NetBSD: CHANGES,v 1.6233 2004/06/20 18:43:26 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2964,3 +2964,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ffmpeg to 0.4.8nb1 [xtraeme 2004-06-20]
 	Updated pax to 20040620 [grant 2004-06-20]
 	Updated cvsync to 0.24.16 [gehenna 2004-06-20]
+	Updated vlc to 0.7.2 [xtraeme 2004-06-20]
